---
source: crates/ohno_macros/src/enrich_err/test_attrs.rs
expression: format_tokens(result)
---
/// Performs a complex operation.
///
/// # Errors
///
/// Returns an error if the operation fails.
#[inline]
#[allow(clippy::unused)]
pub(crate) async unsafe fn complex_operation<'a, 'b, T, U>(
    &'a mut self,
    operation_name: &'b str,
    value: T,
    handler: impl Display + Send,
    callback: &dyn Fn() -> U,
) -> Result<(), OhnoErrorType>
where
    T: Display + Clone + Send + 'static,
    U: Into<String> + Send,
{
    (async || {
        let result = self.process(value).await?;
        callback();
        Ok(())
    })()
        .await
        .map_err(|mut e| {
            let msg = format!("operation failed: {}", operation_name);
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
